<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textSmsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="25dp"
        android:text="@string/smsTitle"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textSmsDescription"
        app:layout_constraintStart_toStartOf="@+id/textSmsDescription"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textSmsDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="103dp"
        android:text="@string/smsDescription"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSmsDeny"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSmsTitle" />

    <Button
        android:id="@+id/buttonSmsAllow"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="63dp"
        android:text="@string/smsButtonAllow"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonSmsDeny"
        app:layout_constraintEnd_toStartOf="@+id/buttonSmsDeny"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSmsDeny"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="380dp"
        android:text="@string/smsButtonDeny"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonSmsAllow"
        app:layout_constraintTop_toBottomOf="@+id/textSmsDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>